--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "concurrently": "^7.0.0",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^3.19.10",
+    "ra-data-simple-rest": "^3.19.10",
     "react": "^17.0.2",
+    "react-admin": "^3.19.10",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "swiper": "^8.0.5",
