--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
     "concurrently": "^7.0.0",
+    "history": "^5.3.0",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
@@ -24,11 +25,12 @@
     "react-scripts": "5.0.0",
     "swiper": "^8.0.5",
     "typeface-open-sans": "^1.1.13",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "json-server --watch db.json --port 8080",
+    "server": "json-server --watch db.json --port 8080 ./server.js",
     "dev": "concurrently \"yarn start\" \"yarn server\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
